--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
    <meta http-equiv="X-UA-Compatible" content="IE=edge">
    <meta name="viewport" content="width=device-width, initial-scale=1">
    <meta name="description" content="Educative  Html Template">
-   <title>Educative  Html Template  </title>
+   <title>MENU PLAY  </title>
    <!--External Stylesheets css-->
    <!-- Bootstrap -->
    <link rel="stylesheet" href="assets/css/bootstrap.min.css">
@@ -60,29 +60,24 @@
                <div class="collapse navbar-collapse " id="navbarSupportedContent">
                   <ul class="navbar-nav ml-auto">
                      <li class="nav-item active">
-                        <a data-scroll="" class="nav-link section-scroll" href="#home">Home</a>
+                        <a data-scroll="" class="nav-link section-scroll" href="#home">HOME</a>
                      </li>
                      <li class="nav-item">
-                        <a data-scroll="" class="nav-link section-scroll" href="#about">About us</a>
+                        <a data-scroll="" class="nav-link section-scroll" href="#about">COMO FUNCIONAR</a>
                      </li>
                      <li class="nav-item">
-                        <a data-scroll="" class="nav-link section-scroll" href="#course">Courses</a>
+                        <a data-scroll="" class="nav-link section-scroll" href="#course">MOTIVOS PARA UTILIZAR</a>
                      </li>
                      <li class="nav-item">
-                        <a data-scroll="" class="nav-link section-scroll" href="#features">Features</a>
+                        <a data-scroll="" class="nav-link section-scroll" href="#features">EXEMPLOS</a>
                      </li>
                      <li>
-                        <a data-scroll=""  class="nav-link section-scroll" href="#testimonials">Testimonials</a>
-                     </li>
-                     <li class="nav-item">
-                        <a data-scroll="" class="nav-link section-scroll" href="#blog">Blog</a>
-                     </li>
-                     <li>
-                        <a data-scroll="" href="#contact" class="nav-link section-scroll">Contact</a>
+                        <a data-scroll=""  class="nav-link section-scroll" href="#testimonials">PLANOS</a>
                      </li>
                      <li>
                      </li>
                   </ul>
+                  <div class="btn-group" wfd-id="114"><a href="index.php?action=dash" class="btn mr-1 bt-entre-topo">Entre</a> <a href="#" class="btn btn-warning btn-get-started scrollto animate__animated animate__fadeInUp btn-picmenu">Crie sua conta</a></div>
                </div>
             </div>
          </nav>
