--- a/public/index.html
+++ b/public/index.html
@@ -29,5 +29,6 @@
 
     <script src="%PUBLIC_URL%/css/vendor/jquery/jquery.min.js"></script>
     <script src="%PUBLIC_URL%/css/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+    </script>
   </body>
 </html>
